# hw07-Group21

./: .gitignore  Keon-Main.ipynb  Makefile  README.md  Yiping-exploration.ipynb  Yiping-main.ipynb  amichaelsen-10-12-repro.ipynb  amichaelsen-exploration-nb.ipynb  contribution_statement.md  environment.yml  envsetup.sh  main.ipynb  q  setup.cfg  stephen-analysis.ipynb  stephen-exploration-other-years.ipynb  stephen-main.ipynb
analysis_notebooks/: Keon-main.ipynb  Stephen-main.ipynb  Yiping-main.ipynb
code/: generate_grad_stats.py  generate_major_stats.py  grad_vs_nongrad_stats.py  process_raw_census.py  rateplot.py
code.egg-info/: PKG-INFO  SOURCES.txt
code/tests/: test_rate_plot.py
collegetools/: gender_tool.py  gendertool.py  generate_major_stats.py  grad_vs_nongrad.py  rateplot.py  utils.py
collegetools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
collegetools/collegetools.egg-info/: PKG-INFO  SOURCES.txt
collegetools/tests/: test_data_processing.py  test_gender_tool.py  test_generate_grad_stats.py  test_grad_vs_nongrad.py  test_rate_plot.py  test_utils.py
data/census/: PUMS_DOCS.md
data/pums/processed/: 2010_graduate_stats_by_major.csv  2010_recent_grad_stats_by_major.csv  2012_graduate_stats_by_major.csv  2012_recent_grad_stats_by_major.csv  2014_graduate_stats_by_major.csv  2014_recent_grad_stats_by_major.csv  2016_graduate_stats_by_major.csv  2016_recent_grad_stats_by_major.csv  2018_graduate_stats_by_major.csv  2018_recent_grad_stats_by_major.csv  employment_rate_processed.csv  wage_rate_processed.csv
