# Declarative configuration for setup.py

# For more details on this format, see the official docs here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# And a useful annotated template can be found here:
# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name             = collegetools
version          = "0.0.1"
author           = Stephen Ou, Anya Michaelsen, Yiping Fan, Keon Etebari
author_email     = stephenouu@berkeley.edu
description      = A Python library to collegetools
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords         = tools, college
classifiers      =
	Programming Language :: Python :: 3.9
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
include_package_data = True
packages = find:
python_requires  = >= 3,
install_requires =
	tqdm